--- a/app/assets/stylesheets/budget_items.css.scss
+++ b/app/assets/stylesheets/budget_items.css.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the BudgetItems controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.section_header {
+  font: {
+    weight: bold;
+    size: 110%;
+  }
+}
