added support for direct entry of budget amounts for each period

--- a/app/views/budget_items/_form_fields.html.haml
+++ b/app/views/budget_items/_form_fields.html.haml
@@ -31,3 +31,4 @@
   =distributor_fields.fields_for(:args) do |args_fields|
     =render 'average_fields', form: args_fields
     =render 'total_fields', form: args_fields
+    =render 'direct_fields', form: args_fields, budget: @budget
