--- a/app/views/budget_items/new.html.haml
+++ b/app/views/budget_items/new.html.haml
@@ -5,3 +5,4 @@
   =render 'form_fields', f: f
   .actions
     =f.submit 'Save', class: 'save_button', title: 'Click here to save the budget item.'
+    =link_to 'Back', budget_budget_items_path(@budget), class: 'back_button', title: 'Click here to return the list of budget items.'
