--- a/app/views/budget_items/_form_fields.html.haml
+++ b/app/views/budget_items/_form_fields.html.haml
@@ -28,7 +28,7 @@
     =distributor_fields.label :method, 'Method'
     %br
     =distributor_fields.select :method, options_for_select(BudgetItemDistributor.methods)
-  =distributor_fields.fields_for(:args) do |args_fields|
+  =distributor_fields.fields_for(:options) do |args_fields|
     =render 'average_fields', form: args_fields
     =render 'total_fields', form: args_fields
     =render 'direct_fields', form: args_fields, budget: @budget
