--- a/app/views/budget_items/edit.html.haml
+++ b/app/views/budget_items/edit.html.haml
@@ -1,2 +1,8 @@
-<h1>BudgetItems#edit</h1>
-<p>Find me in app/views/budget_items/edit.html.erb</p>
+%h2#page_title Edit budget item
+
+=render "shared/errors", :resource => @budget_item
+=form_for(@budget_item) do |f|
+  =render 'form_fields', f: f, budget_item: @budget_item
+  .actions
+    =f.submit 'Save', class: 'save_button', title: 'Click here to save the budget item.'
+    =link_to 'Back', budget_budget_items_path(@budget_item.budget), class: 'back_button', title: 'Click here to return the list of budget items.'
