--- a/app/views/budget_items/new.html.haml
+++ b/app/views/budget_items/new.html.haml
@@ -2,7 +2,7 @@
 
 =render "shared/errors", :resource => @budget_item
 =form_for([@budget, @budget_item]) do |f|
-  =render 'form_fields', f: f
+  =render 'form_fields', f: f, budget_item: @budget_item
   .actions
     =f.submit 'Save', class: 'save_button', title: 'Click here to save the budget item.'
     =link_to 'Back', budget_budget_items_path(@budget), class: 'back_button', title: 'Click here to return the list of budget items.'
