--- a/app/views/budget_items/_direct_fields.html.haml
+++ b/app/views/budget_items/_direct_fields.html.haml
@@ -1,5 +1,5 @@
 -budget.periods.each_with_index do |period, index|
   %div.method_direct
-    =form.label "amounts[#{index}]", period.start_date.strftime('%b %Y')
+    =form.label "amounts_#{index}", period.start_date.strftime('%b %Y')
     %br
-    =form.number_field "amounts[#{index}]", class: 'method_total'
+    =number_field_tag "distributor[options][amounts[#{index}]]", distributor.amounts[index], class: 'method_total', id: "distributor_options_amounts_#{index}"
