--- a/app/views/transactions/show.html.haml
+++ b/app/views/transactions/show.html.haml
@@ -1,2 +1,3 @@
-<h1>Transactions#show</h1>
-<p>Find me in app/views/transactions/show.html.erb</p>
+%h2#page_title Transaction
+=form_for(@transaction) do |f|
+  =render 'form_fields', f: f, transaction: @transaction, items: @transaction.items
