--- a/app/views/reconciliations/new.html.haml
+++ b/app/views/reconciliations/new.html.haml
@@ -1,16 +1,44 @@
 %h2#page_title Reconciliation
 
 =form_for([@reconciliation.account, @reconciliation]) do |f|
-  %div
-    =f.label :reconciliation_date
-    %br
-    =f.text_field :reconciliation_date
-    
-  %div
-    =f.label :closing_balance
-    %br
-    =f.text_field :closing_balance
-  
+  .reconciliation_information
+    %table.reconciliation_table{ cellspacing: 0, cellpadding: 0}
+      %tr
+        %th &nbsp;
+        %th.number_column Date
+        %th.number_column Balance
+      %tr
+        %td Previous
+        %td.number_column.display_cell= format_date(@reconciliation.previous_reconciliation_date)
+        %td.number_column.display_cell= format_currency(@reconciliation.previous_balance)
+      %tr
+        %td Current
+        %td.number_column= f.text_field :reconciliation_date
+        %td.number_column= f.text_field :closing_balance
+      %tr
+        %td Cleared
+        %td &nbsp;
+        %td.number_column.display_cell
+          %span#cleared_balance 0.00
+      %tr
+        %td Difference
+        %td &nbsp;
+        %td.number_column.display_cell
+          %span#balance_difference 0.00
+      
+  %table#transactions_table.list{ cellspacing: 0, cellpadding: 0}
+    %tr
+      %th Transaction date
+      %th Description
+      %th.number_column Amount
+      %th.check_column Cleared
+    -@reconciliation.account.transaction_items.unreconciled.each do |item|
+      %tr
+        %td= format_date(item.transaction.transaction_date)
+        %td= item.transaction.description
+        %td.number_column= format_currency(item.amount)
+        %td.check_column
+          =check_box_tag "reconciliation[items_attributes][transaction_item_id]", item.id
   .actions
     =f.submit 'Save', class: 'save_button', title: 'Click here to complete the reconciliation.'
     =link_to 'Back', entity_accounts_path(@reconciliation.account.entity), class: 'back_button', title: 'Click here to return to the account list.'
