refined reconciliation view, behaviors

--- a/app/assets/stylesheets/reconciliations.css.scss
+++ b/app/assets/stylesheets/reconciliations.css.scss
@@ -14,3 +14,11 @@
     padding-right: .3em;
   }
 }
+
+#reconciliation_closing_balance {
+  width: 5em;
+}
+
+#reconciliation_reconciliation_date {
+  width: 5em;
+}
