--- a/app/views/accounts/_account_row.html.haml
+++ b/app/views/accounts/_account_row.html.haml
@@ -1,6 +1,6 @@
 %tr.account_row{ :id => "account_#{account.id}" }
   %td
-    %div{class: "account_depth_#{account.depth}"}= account.name
+    %div{class: "account_depth_#{account.depth}"}= link_to account.name, account_transactions_path(account)
   %td.number_column= format_currency(account.balance_with_children)
   %td.action_cell
     = link_to "Edit", edit_account_path(account), class: 'edit_button', title: 'Click here to edit this account.'
