added create to transaction items view

--- a/app/views/transaction_items/index.html.haml
+++ b/app/views/transaction_items/index.html.haml
@@ -22,13 +22,15 @@
 =form_tag(account_transaction_items_path(@account)) do
   %table.list_form{cellspacing: 0, cellpadding: 0}
     %tr
-      %td.transaction_date_cell= text_field_tag :transaction_date, format_date(@transaction_item_creator.transaction_date)
-      %td.description_cell= text_field_tag :description, @transaction_item_creator.description
-      %td.account_cell= select_tag :other_account_id, grouped_options_for_select(available_accounts(@account.entity), @transaction_item_creator.other_account_id)
+      %td.transaction_date_cell= text_field_tag 'transaction_item_creator[transaction_date]', format_date(@transaction_item_creator.transaction_date)
+      %td.description_cell= text_field_tag 'transaction_item_creator[description]', @transaction_item_creator.description
+      %td.account_cell= select_tag 'transaction_item_creator[other_account_id]', grouped_options_for_select(available_accounts(@account.entity), @transaction_item_creator.other_account_id)
       %td.reconciled_cell &nbsp;
-      %td.amount_cell= number_field_tag :amount, @transaction_item_creator.amount
+      %td.amount_cell= number_field_tag 'transaction_item_creator[amount]', @transaction_item_creator.amount
       %td.balance_cell &nbsp;
       %td.actions &nbsp;
-.actions
-  =link_to 'Back', entity_accounts_path(@account.entity), class: 'back_button'
-  =link_to 'Reconcile', new_account_reconciliation_path(@account), class: 'reconcile_button'
+  =render "shared/errors", :resource => @transaction_item_creator
+  .actions
+    =submit_tag 'Save', class: 'save_button'
+    =link_to 'Back', entity_accounts_path(@account.entity), class: 'back_button'
+    =link_to 'Reconcile', new_account_reconciliation_path(@account), class: 'reconcile_button'
