--- a/app/views/transaction_items/index.html.haml
+++ b/app/views/transaction_items/index.html.haml
@@ -10,7 +10,7 @@
     %th.balance_cell.number_column Balance
     %th.actions &nbsp;
   -@transaction_items.each_with_index do |item, index|
-    %tr{ class: ((index % 2) == 0) ? '' : 'alt_table_row' }
+    %tr{ class: ((index % 2) == 0) ? '' : 'alt_table_row', onclick: 'toggleEditState' }
       %td.transaction_date_cell= format_date(item.transaction.transaction_date)
       %td.description_cell= item.transaction.description
       %td.account_cell= other_account(item)
@@ -34,3 +34,14 @@
     =submit_tag 'Save', class: 'save_button'
     =link_to 'Back', entity_accounts_path(@account.entity), class: 'back_button'
     =link_to 'Reconcile', new_account_reconciliation_path(@account), class: 'reconcile_button'
+#edit_form
+  =form_tag('transaction_items/0', method: :post) do
+    %table.list_form{cellspacing: 0, cellpadding: 0}
+      %tr
+        %td.transaction_date_cell= text_field_tag 'transaction_item_creator[transaction_date]'
+        %td.description_cell= text_field_tag 'transaction_item_creator[description]'
+        %td.account_cell= select_tag 'transaction_item_creator[other_account_id]', grouped_options_for_select(available_accounts(@account.entity))
+        %td.reconciled_cell &nbsp;
+        %td.amount_cell= number_field_tag 'transaction_item_creator[amount]'
+        %td.balance_cell &nbsp;
+        %td.actions= submit_tag 'Save', class: 'save_button', title: 'Click here to update the transaction.'
