--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -199,7 +199,7 @@ table.attributes {
 .any_form_button {
   @extend .any_button;
   padding: 0;
-  background-color: #FFF;
+  background-color: transparent;
   border: 0px;
   cursor: pointer;
 }
