--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,3 +1,6 @@
 %h2#page_title Accounts
 
 =render 'accounts_table', accounts: @accounts
+.actions
+  =link_to 'Add', new_entity_account_path(@entity), class: 'add_button', title: 'Click here to add an account.'
+  =link_to 'Back', entities_path, class: 'back_button', title: 'Click here to return to the list of entities.'
