--- a/app/views/entities/index.html.haml
+++ b/app/views/entities/index.html.haml
@@ -1,14 +1,3 @@
 %h2#page_title Entities
 
-%table#entities_table.list{cellspacing: 0, cellpadding:0}
-  %tr
-    %th Name
-    %th.action_cell &nbsp;
-  -@entities.each do |entity|
-    %tr{id: "entity_#{entity.id}" }
-      %td= link_to entity.name, entity_path(entity)
-      %td.action_cell
-        =link_to "Edit", edit_entity_path(entity), class: 'edit_button', title: 'Click here to edit the entity'
-        =render "shared/delete_form", resource: entity, url: entity_url(entity)
-.actions
-  =link_to 'Add', new_entity_path, class: 'add_button'
+=render 'entity_list', entities: @entities
