--- a/app/assets/stylesheets/single_page.css.scss
+++ b/app/assets/stylesheets/single_page.css.scss
@@ -1,4 +1,5 @@
 #account_container {
+  display: inline-block;
   padding: 1em;
   margin: {
     top: 1em;
@@ -6,5 +7,5 @@
   }
   border: 1px solid black;
   border-radius: 1em;
-  width: 20em;
+  min-width: 10em;  
 }
