[#61825190] misc. style cleanup

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -7,7 +7,7 @@
   Entity: 
   %select{ data: { bind: "options: entities, optionsText: 'name', value: selectedEntity, optionsCaption: 'Select an entity...'" } }
 #account_container
-  %table#account_list{ cellspacing: 0, cellpadding: 0 }
+  %table#account_list.inner_list{ cellspacing: 0, cellpadding: 0 }
     %tbody{ data: { bind: "foreach: accounts" } }
       %tr
         %td{ data: { bind: "text: name, css: cssClass" }}
