[#61825190] added logic to ensure that each account is only displayed once

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -6,10 +6,9 @@
     
     // Initialize the tab panel and refresh when new tabs are added
     var tabs = $('#tab_container').tabs();
-    app.displayedAccounts.subscribe(function() {
+    app.selectedAccountIndex.subscribe(function(index) {
       tabs.tabs('refresh');
-      var length = $('#tab_container div').length
-      tabs.tabs('option', 'active', length - 1);
+      tabs.tabs('option', 'active', index);
     });
   })
 #entity_and_account
