--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -15,31 +15,4 @@
   #entity_container
     %select{ data: { bind: "options: entities, optionsText: 'name', value: selectedEntity" } }
   #account_container
-    %table#account_list.inner_list{ cellspacing: 0, cellpadding: 0 }
-      %tbody{ data: { bind: "foreach: accounts" } }
-        %tr{ data: { bind: "click: window.showTransactions" }}
-          %td{ data: { bind: "text: name, css: cssClass" }}
-          %td.number_column{ data: { bind: "text: formattedBalanceWithChildren" }}
-#tab_container
-  %ul{ data: { bind: "foreach:displayedAccounts"}}
-    %li
-      %a{ data: { bind: "text: name, attr: {'href': '#' + element_id}"}}
-  <!-- ko foreach: displayedAccounts -->
-  %div{ data: { bind: "attr: {'id': element_id}"}}
-    %table.transaction_item_table
-      %tr
-        -#%th Date
-        -#%th Description
-        -#%th Account
-        %th Rec.
-        %th.number_column Amount
-        %th.number_column Balance
-      %tbody{ data: { bind: "foreach: transaction_items" }}
-        %tr
-          -#%td{ data: { bind: "text: formattedTransactionDate" }}
-          -#%td{ data: { bind: "text: description" }}
-          -#%td{ data: { bind: "text: account" }}
-          %td{ data: { bind: "text: formattedReconciled" }}
-          %td.number_column{ data: { bind: "text: formattedAmount" }}
-          %td.number_column{ data: { bind: "text: formattedBalance" }}
-  <!-- /ko -->
+    %span{ data: { bind: "text: selectedEntity().name" }}
