--- a/app/assets/stylesheets/single_page.css.scss
+++ b/app/assets/stylesheets/single_page.css.scss
@@ -25,7 +25,24 @@
   }
   border: 1px solid black;
   border-radius: 1em;
-  min-width: 10em;  
+  min-width: 10em;
+  table.list {
+    border:none;
+  }
+  table.list th {
+    padding: {
+      left: .2em;
+      right: 1em;
+    }
+    &:first-of-type {
+      border-top-left-radius: .6em;
+      border-bottom-left-radius: .6em;
+    }
+    &:last-of-type {
+      border-top-right-radius: .6em;
+      border-bottom-right-radius: .6em;
+    }
+  }
 }
 
 .account_list_item {
@@ -38,4 +55,18 @@
   }
   min-height: 20em;
   min-width: 60em;
+}
+
+tr.account_category td {
+  font-weight: bold;
+  font-size: 110%;
+}
+
+span.account_depth_0 {
+}
+span.account_depth_1 {
+  padding-left: 2em;
+}
+span.account_depth_2 {
+  padding-left: 4em;
 }
